--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ border-style:none;">
 
  else  
 
- {window.location = "https://blog.520bbs.xyz";}  
+ {window.location = "https://blog.5";}  
 
  }</script> 
 
