--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ border-style:none;">
 
  </form> 
 
- <p align="center"> 如果您的浏览器不支持跳转,<a style="text-decoration: none" href="https://blog.520bbs.xyz"><font color="#FF0000">请点这里</font></a>.</p>
+ <p align="center"> 如果您的浏览器不支持跳转,<a style="text-decoration: none" href="https://000.123678.top"><font color="#FF0000">请点这里</font></a>.</p>
 
  </body>
 
